--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ before_build:
 build_script:
 - cmd: dotnet publish --framework netcoreapp2.0 -c Release ./Web/QueryTree.csproj -o ./dist
 after_build:
-- cmd: 7z c QueryTree.zip dist/
+- cmd: 7z a QueryTree.zip dist/
 artifacts:
 - path: QueryTree.zip
   name: QueryTree
